CHANGES/VERSION
===============

Ver 2.0.22 - in progress
* Fixed line width calculation for normal and textured polygons
  (patch contributed by Daniel (SupSuper) 
* Fixed version setup in configure.in
* Added rounded rectangle and rounded box functions
* Updated test program for roundedbox + left/right-click support
* Fixed pie calculation (line-case detection, end-angle clipping)

Ver 2.0.21 - Thu May 27 21:14:37 PDT 2010
* Add VC9 project files, source code formatting, fix compiler 
  warnings, move VC8 project files, remove leftover autoconf/m4 files
* Move static transfer lookup array from .h to .c 
  (patch contributed by Zbigniew Holdys)
* Add support for VC++ compiler/MASM assembly with active USE_MMX 
  (contributed by Markus Hossner)
* Added Haiku build support in configure.in 
  (contributed by Scott McCreary)
* Added helper function that multiplies the alpha channel in
  a 32bit surface (contributed by Zbigniew Holdys)
* Disable MMX for 64bit platforms due to lack of support for
  pusha/popa (contributed by Olivier Boudeville)
* Update all library functions for doxygen markup. Add doxygen
  configuration file.
* Added font rotation support and updated TestFonts sample
* Fixed rotate90 for 0 degree case
  (contributed by Chris Allport)
* Updated TestRotozoom with rotate90 case and message display
* Added support for SDL 1.3
* Added doxygen generated documentation.

Ver 2.0.20 - Wed Sep 23 18:42:02 PDT 2009
* Fix for 1-pixel postponement with 8bit scaling 
* Updates to headers and configure to allow for cross-compiling 
  to DLL (not just static .a) and fixes for compiling on Windows 
  using autotools
* Added Visual CE Project to Other Builds
* Added Symbian and Windows 64bit fix for lrint function.

Ver 2.0.19 - Mon Apr 20 22:56:59 PDT 2009

* gcc43 compiler patch for asm code in image filters 
  as per http://bugs.gentoo.org/219621 (Peter Alfredsen)
* off-by-one hline patch for 1byte indexed surfaces (Manuel Lausch)